--- a/app.json
+++ b/app.json
@@ -1,18 +1,5 @@
 {
-  "name": "DORR∆T-BOT-MD",
-  "description": "Subscribete a Diegogameplays82 - Bot (≧▽≦)",
-  "repository": "https://github.com/DIEGO-OFC/DORRAT-BOT-MD",
-  "logo": "https://raw.githubusercontent.com/DIEGO-OFC/DORRAT-BOT-MD/master/Menu2.jpg",
-  "keywords": ["java", "bot", "whatsapp-bot", "whatsapp-automation"],
-  "buildpacks": [
-  {
-    "url": "heroku/nodejs"
-  },
-  {
-    "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
-  },
-  {
-    "url": "https://github.com/bogini/heroku-buildpack-graphicsmagick"
-  }    
- ]
-}
+  "name": "MARTII-BOT",
+  "description": "Sigueme en Instagram @martii.bs - BOT (≧▽≦)",
+  "repository": "https://github.com/martii0105/Martii-bot",
+  "logo": "https://github.com/martii0105/Martii-bot/blob/main/galeria/102%20sin%20t%C3%ADtulo_20230319210127.png"
